[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AloneMusic"
version = "0.1.0"
description = "🎵 Telegram Music Bot by TheAloneTeam"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "TheAloneTeam", email = "thealoneteam@users.noreply.github.com" }
]
keywords = ["telegram", "music", "bot", "pyrogram", "pytgcalls"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.8.5",
    "apscheduler==3.10.1",
    "beautifulsoup4==4.12.2",
    "dnspython==2.4.2",
    "ffmpeg-python==0.2.1",
    "gitpython==3.1.32",
    "hachoir==3.1.7",
    "heroku3==5.0.0",
    "humanize==4.8.0",
    "motor==3.1.1",
    "Pillow==9.5.0",
    "psutil==5.9.6",
    "httpx==0.27.2",
    "py-tgcalls==0.9.7",
    "pykeyboard==1.0.4",
    "pyrofork==1.1.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0",
    "requests==2.31.0",
    "speedtest-cli==2.1.3",
    "spotipy==2.26.0",
    "tgcrypto==1.2.2",
    "unidecode==1.3.6",
    "yt-dlp==2025.01.15",
    "youtube-search==1.1.6",
    "youtube-search-python==1.5.9"
]

[tool.setuptools.packages.find]
include = ["AloneMusic", "core", "config", "strings"]

[project.urls]
Repository = "https://github.com/TheAloneTeam/AloneMusic"
Issues = "https://github.com/TheAloneTeam/AloneMusic/issues"
Changelog = "https://github.com/TheAloneTeam/AloneMusic/blob/master/CHANGELOG.md"

[project.scripts]
alonemusic = "AloneMusic.__main__:main"
